2013-03-19  Ramon Novoa  <rnovoa@artica.es>

	* bin/pandora_server: Moved a log message to verbosity 10.

2013-03-19  Ramon Novoa  <rnovoa@artica.es>

	* bin/pandora_server: Style fix.

2013-03-19  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm,
	  bin/pandora_server,
	  util/pandora_db.pl: Added support for on-demand module status
	  calculation.

2013-03-15  Sancho Lerena <slerena@artica.es>

	* util/pandora_database_check.pl: added to trunk repo. Tool to 
	measure transaction speed in pandora. Merged from 4.x branch.
 
2013-03-13  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Tools.pm: Added support for ranges to server cron
	  modules.

	* lib/PandoraFMS/ProducerConsumerServer.pm: Update queue stats after
	  queuing new new modules.

2013-03-11 Vanessa Gil <vanessa.gil@artica.es>
	
	* util/pandora_revent.pl: Addapted to API's function
	'create_event'.

2013-03-11  Sancho Lerena <slerena@artica.es>

	* util/pandora_xml_stress.conf: Updated conf file to use the new
	threshold values in the generation of xml. Better defaults for
	proc types. 

2013-03-11  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_xml_stress.pl: Added support for critical and warning
	  thresholds.

2013-03-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* lib/PandoraFMS/Core.pm: added in the start or end of downtimes
	the event with the id_user.
	
	Fixes: #3607163

2013-03-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* lib/PandoraFMS/WMIServer.pm: fixed when the wmi query have not a
	password.
	
	Fixes: #3563221

2013-03-06  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed alert fired counts when
	reset internal counter and fired times in threshold loop

2013-03-06  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm: Add macros substitution in all the
	text fields of generate event command

2013-03-06  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm: Change the update count of fired alerts 