@@ -234,6 +234,10 @@ snmpget /usr/bin/snmpget
 
 braa /usr/bin/braa
 
+# Number of retries before braa hands a module over to the Network Server (PANDORA FMS ENTERPRISE ONLY).
+
+braa_retries 3
+
 # Default group id for new agents created with Pandora FMS Data Server
 
 autocreate_group 2
