@@ -253,6 +253,9 @@ sub pandora_load_config {
 	# braa for enterprise snmp server
 	$pa_config->{"braa"} = "/usr/bin/braa";
 
+	# SNMP enterprise retries (for braa)
+	$pa_config->{"braa_retries"} = 3; # 5.0
+	
 	# Xprobe2 for recon OS fingerprinting and tcpscan (optional)
 	$pa_config->{"xprobe2"} = "/usr/bin/xprobe2";
 
@@ -292,7 +295,7 @@ sub pandora_load_config {
 
 	# Event auto-validation
 	$pa_config->{"event_auto_validation"} = 1; # 5.0
-	
+	 
 	# -------------------------------------------------------------------------
 	# This values are not stored in .conf files. 
 	# This values should be stored in database, not in .conf files!
@@ -540,6 +543,9 @@ sub pandora_load_config {
 		}
 		elsif ($parametro =~ m/^braa\s(.*)/i) {
 			$pa_config->{'braa'}= clean_blank($1); 
+		}
+		elsif ($parametro =~ m/^braa_retries\s([0-9]*)/i) {
+			$pa_config->{"braa_retries"} = clean_blank($1);
 		}
 		elsif ($parametro =~ m/^xprobe2\s(.*)/i) {
 			$pa_config->{'xprobe2'}= clean_blank($1); 
